; ModuleID = '/home/carl/AnghaBench/radare2/shlr/qnx/src/extr_utils.c_i386nto_regset_id.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/qnx/src/extr_utils.c_i386nto_regset_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NTO_REG_END = common dso_local global i32 0, align 4
@I386_NUM_GREGS = common dso_local global i32 0, align 4
@NTO_REG_GENERAL = common dso_local global i32 0, align 4
@I386_NUM_FREGS = common dso_local global i32 0, align 4
@NTO_REG_FLOAT = common dso_local global i32 0, align 4
@I386_SSE_NUM_REGS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @i386nto_regset_id(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = icmp eq i32 %4, -1
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @NTO_REG_END, align 4
  store i32 %7, i32* %2, align 4
  br label %29

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @I386_NUM_GREGS, align 4
  %11 = icmp slt i32 %9, %10
  br i1 %11, label %12, label %14

12:                                               ; preds = %8
  %13 = load i32, i32* @NTO_REG_GENERAL, align 4
  store i32 %13, i32* %2, align 4
  br label %29

14:                                               ; preds = %8
  %15 = load i32, i32* %3, align 4
  %16 = load i32, i32* @I386_NUM_GREGS, align 4
  %17 = load i32, i32* @I386_NUM_FREGS, align 4
  %18 = add nsw i32 %16, %17
  %19 = icmp slt i32 %15, %18
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i32, i32* @NTO_REG_FLOAT, align 4
  store i32 %21, i32* %2, align 4
  br label %29

22:                                               ; preds = %14
  %23 = load i32, i32* %3, align 4
  %24 = load i32, i32* @I386_SSE_NUM_REGS, align 4
  %25 = icmp slt i32 %23, %24
  br i1 %25, label %26, label %28

26:                                               ; preds = %22
  %27 = load i32, i32* @NTO_REG_FLOAT, align 4
  store i32 %27, i32* %2, align 4
  br label %29

28:                                               ; preds = %22
  store i32 -1, i32* %2, align 4
  br label %29

29:                                               ; preds = %28, %26, %20, %12, %6
  %30 = load i32, i32* %2, align 4
  ret i32 %30
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
